force-app/main/default/objects/accessnow__ACNW_Permission__c/fields/accessnow__Name__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Name__c</fullName>
    <label>Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>