force-app/main/default/objects/accessnow__ACNW_Permission__c/fields/accessnow__Permission_Count__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Permission_Count__c</fullName>
    <description>Permission count from user permission</description>
    <inlineHelpText>Permission count</inlineHelpText>
    <label>Permission Count</label>
    <summarizedField>accessnow__ACNW_User_Permission__c.accessnow__Permission_Count__c</summarizedField>
    <summaryForeignKey>accessnow__ACNW_User_Permission__c.accessnow__Permission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>