force-app/main/default/objects/accessnow__ACNW_Permission__c/fields/accessnow__SF_Permission_Id__c.field-meta.xml
<CustomField>
    <fullName>accessnow__SF_Permission_Id__c</fullName>
    <label>SF Permission Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>