force-app/main/default/objects/accessnow__ACNW_Permission__c/fields/accessnow__Type__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>