force-app/main/default/objects/accessnow__ACNW_Permission__c/validationRules/accessnow__License_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>accessnow__License_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(accessnow__License_Required__c) &amp;&amp;  !ISPICKVAL(accessnow__Type__c, &#39;Role&#39;)</errorConditionFormula>
    <errorMessage>License is required.</errorMessage>
</ValidationRule>