force-app/main/default/objects/accessnow__ACNW_Permission__c/listViews/accessnow__All.listView-meta.xml
<ListView>
    <fullName>accessnow__All</fullName>
    <columns>NAME</columns>
    <columns>accessnow__Name__c</columns>
    <columns>accessnow__Type__c</columns>
    <columns>accessnow__License_Required__c</columns>
    <columns>accessnow__Permission_Count__c</columns>
    <columns>accessnow__SF_Permission_Id__c</columns>
    <columns>accessnow__Approval_relavent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>