force-app/main/default/objects/accessnow__ACNW_Permission__c/listViews/accessnow__Permission_Sets.listView-meta.xml
<ListView>
    <fullName>accessnow__Permission_Sets</fullName>
    <columns>NAME</columns>
    <columns>accessnow__License_Required__c</columns>
    <columns>accessnow__Name__c</columns>
    <columns>accessnow__Type__c</columns>
    <columns>accessnow__Approval_relavent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>accessnow__Type__c</field>
        <operation>equals</operation>
        <value>Permission Set</value>
    </filters>
    <label>Permission Sets</label>
</ListView>