force-app/main/default/objects/accessnow__ACNW_Permission__c/listViews/accessnow__Platform_Permissions.listView-meta.xml
<ListView>
    <fullName>accessnow__Platform_Permissions</fullName>
    <columns>NAME</columns>
    <columns>accessnow__License_Required__c</columns>
    <columns>accessnow__Permission_Count__c</columns>
    <columns>accessnow__SF_Permission_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>accessnow__License_Required__c</field>
        <operation>includes</operation>
        <value>Salesforce Platform</value>
    </filters>
    <label>Platform Permissions</label>
</ListView>