force-app/main/default/objects/accessnow__ACNW_Permission__c/listViews/accessnow__Role_Permissions.listView-meta.xml
<ListView>
    <fullName>accessnow__Role_Permissions</fullName>
    <columns>NAME</columns>
    <columns>accessnow__License_Required__c</columns>
    <columns>accessnow__Name__c</columns>
    <columns>accessnow__Type__c</columns>
    <columns>accessnow__Approval_relavent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>accessnow__Type__c</field>
        <operation>equals</operation>
        <value>Role</value>
    </filters>
    <label>Role Permissions</label>
    <language>en_US</language>
</ListView>