force-app/main/default/objects/accessnow__ACNW_Permission__c/listViews/accessnow__Salesforce_License_Permissions.listView-meta.xml
<ListView>
    <fullName>accessnow__Salesforce_License_Permissions</fullName>
    <columns>NAME</columns>
    <columns>accessnow__License_Required__c</columns>
    <columns>accessnow__Permission_Count__c</columns>
    <columns>accessnow__SF_Permission_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>accessnow__License_Required__c</field>
        <operation>includes</operation>
        <value>Salesforce</value>
    </filters>
    <label>Salesforce License Permissions</label>
</ListView>