force-app/main/default/objects/accessnow__ACNW_Permission__c/listViews/accessnow__Unused_Permissions.listView-meta.xml
<ListView>
    <fullName>accessnow__Unused_Permissions</fullName>
    <columns>NAME</columns>
    <columns>accessnow__License_Required__c</columns>
    <columns>accessnow__Permission_Count__c</columns>
    <columns>accessnow__SF_Permission_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>accessnow__Permission_Count__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unused Permissions</label>
</ListView>